# sobrus_scraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  conftest.py  dev.duckdb  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  ruff.toml
.dagster/: dagster.yaml
src/backend/: .env.example  manage.py  pyproject.toml  requirements.txt
src/backend/core/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/backend/grossiste/: admin.py  api.py  client.py  models.py
src/backend/grossiste/management/commands/: load_grossiste_file.py  sync_grossiste.py
src/backend/grossiste/migrations/: 0001_initial.py  0002_remove_grossisteproduct_unique_grossiste_product_code_and_more.py  0003_remove_credentials.py  0004_merge_20260616_1547.py  0005_update_grossisteorder.py  0006_remove_grossisteconfig_password_and_more.py
src/backend/products/: admin.py  api.py  apps.py  models.py
src/backend/products/management/commands/: run_matching.py
src/backend/products/migrations/: 0001_initial.py  0002_dailypricelog_hypertable.py  0003_pgvector_embedding.py  0004_alter_dailypricelog_logged_at_and_more.py  0005_siteproduct_unique_per_master_per_site.py  0006_siteproduct_image_url.py  0007_dailypricelog_set_null_fks.py
src/backend/scraper_admin/: admin.py  api.py  apps.py  models.py
src/backend/scraper_admin/management/commands/: run_discovery.py
src/backend/scraper_admin/migrations/: 0001_initial.py  0002_scrapelog_hypertable.py  0003_alter_proxypool_country_code_and_more.py  0004_proxypool_sites.py
(+55 files in other folders)
